# lambda-endpoint

./: Cargo.toml
migrations/2019-11-20-184901_create_traces/: down.sql  up.sql
src/: endpoint.rs  main.rs
src/cli/: app.rs  mod.rs
src/config/: global_config.rs  mod.rs
src/db/: connection.rs  mod.rs
src/db/model/: trace.rs
src/db/schema/: trace.rs
src/http_client/: client.rs
src/http_server/: global_state.rs  handler.rs  mod.rs  reply.rs  requests.rs  router.rs
