[package]
name = "lambda_endpoint"
version = "0.1.0"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = "0.4.0"
serde = {version = "1.0.102", features = ["derive"]}
clap = "2.33.0"
jemallocator = "0.3.2"
diesel = {version = "1.4.3", features = ["postgres"]}
toml = "0.5.5"
lazy_static = "1.4.0"
regex = "1"